<!--
  ~ Headwind MDM: Open Source Android MDM Software
  ~ https://h-mdm.com
  ~
  ~ WiFi Manager Plugin
  ~
  ~ Copyright (C) 2020 Headwind Solutions LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">WiFi Manager</string>

    <string name="wifi">Wi-Fi</string>
    <string name="add">Add network…</string>
    <string name="error_load_config">Failed to load configuration</string>
    <string name="no_items">No networks available</string>
    <string name="connected">Connected</string>
    <string name="have_protection">Secured</string>
    <string name="no_protection">Not secured</string>
    <string name="signal_level">Signal level</string>
    <string name="encryption_type">Encryption</string>
    <string name="password">Password</string>
    <string name="no_encryption">No encryption</string>
    <string name="speed">Speed</string>
    <string name="ip">IP address</string>
    <string name="no">No</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="delete_network">FORGET</string>
    <string name="close">CLOSE</string>
    <string name="need_enable_location_services">To scan WiFi networks, please turn on location service.</string>
    <string name="enable">Turn on</string>
    <string name="run_anyway">Run anyway</string>
    <string name="exit">Exit</string>
    <string name="need_location_permissions">To scan WiFi networks, please allow the app to use location services.</string>
    <string name="provide">Allow</string>
    <string name="app_not_config">The app is not configured. Please contact your system administrator for details.</string>
    <string name="mbps">Mbps</string>
    <string name="password_toast">Enter password (8+ symbols).</string>
    <string name="disconnection">DISCONNECTING…</string>
    <string name="connection">CONNECTING…</string>
    <string name="failed_connect_to">Failed to connect to </string>
    <string name="wrong_password">Wrong password.</string>
    <string name="error">Error: </string>
    <string name="error_on_connection">Connection error.</string>
    <string name="wifi_manage_error">On Android 11 and above, use system WiFi manager to switch between networks.</string>
    <string name="config_error">Error while parsing the configuration from the MDM</string>

    <string-array name="signal_levels">
        <item>No signal</item>
        <item>Weak</item>
        <item>Medium</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>
    <string name="encryption_open">None</string>
</resources>
